fix: Fix carousels overflowing on mobile devices
On mobile viewports the overflow-x: hidden css declartion gets stripped
from the body and html elements, so i've used a site wrapper div instead
to apply it too.

--- a/styles/base/_base.scss
+++ b/styles/base/_base.scss
@@ -2,6 +2,11 @@ body {
     font-family: 'Poppins', sans-serif;
     line-height: 1.5;
     letter-spacing: 0.4px;
+}
+
+// This is used as could not find a way to have the clients section hide
+// x-overflow and also have the on hover absolute elements show
+.site-wrapper {
     overflow-x: hidden;
 }
 
